# Dev-Skill-Compass-Server

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  PROJECTOVERVIEW.md  Procfile  README.md  TODO.txt  apprunner.yaml  build.sh  celery.py  docker-compose.yml  entrypoint.sh  function_test.py  get top technologies script.txt  hrefs.txt  install_chrome.sh  playground.py  pyproject.toml  pytest.ini  railway.json  readme.md  repeated_descriptions.txt  requirements.txt  stam.py  vercel.json  windows_daily_task_send_email.py  windows_daily_task_skills_compass.py
.github/.workflows/: ci-cd.yml
.github/workflows/: ci-cd.yml
core/: admin.py  cron.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: init_db.py  initialize_database.py  initialize_db.py  test_command_cron.py
core/migrations/: 0001_initial.py  0002_alter_categories_table_alter_roles_table_and_more.py  0002_remove_roles_categories.py  0003_alter_categories_id_alter_roles_id_and_more.py  0003_rolelistingscount_and_more.py  0004_rolelistingscount_created_at_and_more.py
core/services/: role_listings_count_services.py  roles_service.py  technologies_service.py
core/services/tasks/: role_listings_count_service.py
decorators/: chcek_parameters.py  decorator_measure_function_time.py  messure_function_time_dec.py
django_server/: asgi.py  settings.py  urls.py  wsgi.py
init_db/: init_database_functions.py
init_db/data/: data.py
init_db/tests/: test_init_database_functions.py
logic/data_processing/: data_aggragation.py
logic/data_processing/tests/: test_data_aggregation.py
logic/main_pipeline/: main.py
logic/main_pipeline/tests/: local_db_test_main_pipeline.py  test_main_pipeline.py
logic/pipelines/: daily_pipeline.py  main.py  monthly_pipeline.py  weekly_pipeline.py
logic/pipelines/tests/: local_db_test_main_pipeline.py
logic/proxy/: chcek_proxies.py  proxy.py  proxy_object.py  scrape_proxies.py
logic/text_analysis/: data_loookup_functions.py  tech_term_finder.py
logic/text_analysis/data/: data.py  skills_analysis_functions.py  (+1 more)
logic/web_scraping/: chrome_driver_config.py  descriptions.txt  google_jobs_scraping.py  main_scrape_file.py  scraping_indeed.py  stam.py  test.py  web_scrape_main_run_log.txt
templates/: scan_result_template.html
usage_stats/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
usage_stats/cron/: cron_jobs.py  tasks.py
usage_stats/migrations/: 0001_initial.py  0002_aggregatedtechcounts.py  0002_aggregatedtechcounts_usage_stats_role_id_c149ca_idx_and_more.py  0002_alter_technologiescounts_counter.py  0002_rename_role_historicaltoptechnologies_role_id_and_more.py
usage_stats/services/: aggregated_tech_counts_service.py  historical_tech_counts_service.py  technologies_counts_service.py
utils/: enums.py  functions.py  settings.py
utils/mail_module/: email_module_functions.py
(+54 files in other folders)
