[tool.poetry]
name = "dev-skill-compass-server"
version = "0.1.0"
description = ""
authors = ["Koren <korenkpalan96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.0"
pytest-django = "^4.8.0"
django-crontab = "^0.7.1"
webdriver-manager = "^4.0.1"
lxml = "^5.2.2"
pydantic = "^2.7.2"
python-dateutil = "^2.9.0.post0"
django-cors-headers = "^4.3.1"
django-debug-toolbar = "^4.4.2"
pymemcache = "^4.0.0"
pandas = "^2.2.2"
gunicorn = "^22.0.0"
dj-database-url = "^2.2.0"
memory-profiler = "^0.61.0"
gevent = "^24.2.1"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
